# Bardado

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  dado.rs  eventos.rs  main.rs  music.rs  secret.rs  statuses.rs
src/music/: music_advanced.rs  music_basic.rs  music_events.rs
