[package]
name = "bardado"
version = "0.5.0"
edition = "2021"
publish = false


[dependencies]
anyhow = "1.0.86"
poise = "0.6.1"
serenity = "0.12.2"
tracing = "0.1.40"
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.8.5"
regex = "1.10.5"
calc_engine = "0.4.1"
