[package]
name = "bardado"
version = "0.5.0"
edition = "2021"
publish = false


[dependencies]
anyhow = "1.0.86"
poise = "0.6.1"
shuttle-runtime = "0.49.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.49.0"
tracing = "0.1.40"
rand = "0.8.5"
regex = "1.10.5"
lavalink-rs = "0.13.0"
songbird = "0.4.3"
calc_engine = "0.4.1"
serde_json = "1.0.120"
futures = "0.3.30"
once_cell = "1.19.0"
